Add mailjet sync
https://app.clubhouse.io/enmarche/story/4399/synchronisation-mailjet

--- a/templates/email/adherent_account_activation_message.html.twig
+++ b/templates/email/adherent_account_activation_message.html.twig
@@ -2,7 +2,7 @@
     Confirmez votre compte En-Marche.fr
 {% endblock %}
 
-{% block body_html %}
+{%- block body_html -%}
 
     {% embed 'email/layout.html.twig' %}
         {% block content %}
@@ -39,4 +39,4 @@
         {% endblock %}
     {% endembed %}
 
-{% endblock %}
+{%- endblock -%}
