--- a/templates/email/adherent_account_confirmation_message.html.twig
+++ b/templates/email/adherent_account_confirmation_message.html.twig
@@ -2,7 +2,7 @@
     Et maintenant ?
 {% endblock %}
 {# CHECKER LINK CTA #}
-{% block body_html %}
+{%- block body_html -%}
 
     {% embed 'email/layout.html.twig' %}
         {% block content %}
