--- a/templates/email/adherent_contact_message.html.twig
+++ b/templates/email/adherent_contact_message.html.twig
@@ -2,7 +2,7 @@
     @@sender_first_name@@ vous a envoyé un message
 {% endblock %}
 
-{% block body_html %}
+{%- block body_html -%}
 
     {% embed 'email/layout.html.twig' %}
         {% block content %}
@@ -47,4 +47,4 @@
         {% endblock %}
     {% endembed %}
 
-{% endblock %}
+{%- endblock -%}
