--- a/templates/email/adherent_reset_password_confirmation_message.html.twig
+++ b/templates/email/adherent_reset_password_confirmation_message.html.twig
@@ -2,7 +2,7 @@
     Confirmation réinitialisation du mot de passe
 {% endblock %}
 
-{% block body_html %}
+{%- block body_html -%}
 
     {% embed 'email/layout.html.twig' %}
         {% block content %}
@@ -25,4 +25,4 @@
         {% endblock %}
     {% endembed %}
 
-{% endblock %}
+{%- endblock -%}
