--- a/templates/email/adherent_terminate_membership_message.html.twig
+++ b/templates/email/adherent_terminate_membership_message.html.twig
@@ -2,7 +2,7 @@
     Votre départ d'En Marche !
 {% endblock %}
 
-{% block body_html %}
+{%- block body_html -%}
 
     {% embed 'email/layout.html.twig' %}
         {% block content %}
@@ -31,4 +31,4 @@
         {% endblock %}
     {% endembed %}
 
-{% endblock %}
+{%- endblock -%}
