--- a/templates/email/citizen_action_cancellation_message.html.twig
+++ b/templates/email/citizen_action_cancellation_message.html.twig
@@ -2,7 +2,7 @@
     Une action citoyenne à laquelle vous participez vient d'être annulée.
 {% endblock %}
 
-{% block body_html %}
+{%- block body_html -%}
 
     {% embed 'email/layout.html.twig' %}
         {% block content %}
@@ -37,4 +37,4 @@
         {% endblock %}
     {% endembed %}
 
-{% endblock %}
+{%- endblock -%}
