--- a/templates/email/citizen_project_approval_confirmation_message.html.twig
+++ b/templates/email/citizen_project_approval_confirmation_message.html.twig
@@ -2,7 +2,7 @@
     Votre projet citoyen a été publié. À vous de jouer !
 {% endblock %}
 
-{% block body_html %}
+{%- block body_html -%}
 
     {% embed 'email/layout.html.twig' %}
         {% block content %}
@@ -40,4 +40,4 @@
         {% endblock %}
     {% endembed %}
 
-{% endblock %}
+{%- endblock -%}
