--- a/templates/email/citizen_project_contact_actors_message.html.twig
+++ b/templates/email/citizen_project_contact_actors_message.html.twig
@@ -2,7 +2,7 @@
     @@subject@@
 {% endblock %}
 
-{% block body_html %}
+{%- block body_html -%}
 
     {% embed 'email/layout.html.twig' %}
         {% block content %}
@@ -46,4 +46,4 @@
         {% endblock %}
     {% endembed %}
 
-{% endblock %}
+{%- endblock -%}
