--- a/templates/email/citizen_project_creation_notification_message.html.twig
+++ b/templates/email/citizen_project_creation_notification_message.html.twig
@@ -2,7 +2,7 @@
     De nouveaux projets citoyens se sont lancés près de chez vous !
 {% endblock %}
 
-{% block body_html %}
+{%- block body_html -%}
 
     {% embed 'email/layout.html.twig' %}
         {% block content %}
@@ -47,4 +47,4 @@
             {% endblock %}
     {% endembed %}
 
-{% endblock %}
+{%- endblock -%}
