--- a/templates/email/committee_approval_confirmation_message.html.twig
+++ b/templates/email/committee_approval_confirmation_message.html.twig
@@ -2,7 +2,7 @@
     Votre comité est validé. À vous de jouer !
 {% endblock %}
 
-{% block body_html %}
+{%- block body_html -%}
 
     {% embed 'email/layout.html.twig' %}
         {% block content %}
@@ -44,4 +44,4 @@
         {% endblock %}
     {% endembed %}
 
-{% endblock %}
+{%- endblock -%}
