--- a/templates/email/committee_creation_confirmation_message.html.twig
+++ b/templates/email/committee_creation_confirmation_message.html.twig
@@ -2,7 +2,7 @@
     Votre comité sera bientôt en ligne
 {% endblock %}
 
-{% block body_html %}
+{%- block body_html -%}
 
     {% embed 'email/layout.html.twig' %}
         {% block content %}
@@ -35,4 +35,4 @@
         {% endblock %}
     {% endembed %}
 
-{% endblock %}
+{%- endblock -%}
