--- a/templates/email/event_inside_committee.html.twig
+++ b/templates/email/event_inside_committee.html.twig
@@ -2,7 +2,7 @@
     Nouvel événement dans votre comité : @@event_name@@
 {% endblock %}
 
-{% block body_html %}
+{%- block body_html -%}
 
     {% embed 'email/layout.html.twig' %}
         {% block content %}
@@ -50,4 +50,4 @@
         {% endblock %}
     {% endembed %}
 
-{% endblock %}
+{%- endblock -%}
