--- a/templates/email/event_invitation_message.html.twig
+++ b/templates/email/event_invitation_message.html.twig
@@ -2,7 +2,7 @@
     @@sender_first_name@@  vous invite à un événement En Marche !
 {% endblock %}
 
-{% block body_html %}
+{%- block body_html -%}
 
     {% embed 'email/layout.html.twig' %}
         {% block content %}
@@ -48,4 +48,4 @@
         {% endblock %}
     {% endembed %}
 
-{% endblock %}
+{%- endblock -%}
