--- a/templates/email/invitation_message.html.twig
+++ b/templates/email/invitation_message.html.twig
@@ -2,7 +2,7 @@
     Rejoins En Marche !
 {% endblock %}
 
-{% block body_html %}
+{%- block body_html -%}
 
     {% embed 'email/layout.html.twig' %}
         {% block content %}
@@ -63,4 +63,4 @@
         {% endblock %}
     {% endembed %}
 
-{% endblock %}
+{%- endblock -%}
