--- a/templates/email/newsletter_invitation_message.html.twig
+++ b/templates/email/newsletter_invitation_message.html.twig
@@ -2,7 +2,7 @@
     @@sender_first_name@@ vous invite à vous abonner à la newsletter En Marche !
 {% endblock %}
 
-{% block body_html %}
+{%- block body_html -%}
 
     {% embed 'email/layout.html.twig' %}
         {% block content %}
@@ -38,4 +38,4 @@
         {% endblock %}
     {% endembed %}
 
-{% endblock %}
+{%- endblock -%}
