--- a/templates/email/newsletter_subscription_message.html.twig
+++ b/templates/email/newsletter_subscription_message.html.twig
@@ -2,7 +2,7 @@
     Je marche !
 {% endblock %}
 
-{% block body_html %}
+{%- block body_html -%}
 
     {% embed 'email/layout.html.twig' %}
         {% block content %}
@@ -43,4 +43,4 @@
         {% endblock %}
     {% endembed %}
 
-{% endblock %}
+{%- endblock -%}
