--- a/templates/email/adherent_reset_password_message.html.twig
+++ b/templates/email/adherent_reset_password_message.html.twig
@@ -2,7 +2,7 @@
     Réinitialisation de votre mot de passe
 {% endblock %}
 
-{% block body_html %}
+{%- block body_html -%}
 
     {% embed 'email/layout.html.twig' %}
         {% block content %}
@@ -34,4 +34,4 @@
         {% endblock %}
     {% endembed %}
 
-{% endblock %}
+{%- endblock -%}
