--- a/templates/email/citizen_project_contact_members_message.html.twig
+++ b/templates/email/citizen_project_contact_members_message.html.twig
@@ -2,7 +2,7 @@
     Message de votre porteur de projet
 {% endblock %}
 
-{% block body_html %}
+{%- block body_html -%}
 
     {% embed 'email/layout.html.twig' %}
         {% block content %}
@@ -50,4 +50,4 @@
         {% endblock %}
     {% endembed %}
 
-{% endblock %}
+{%- endblock -%}
