--- a/templates/email/citizen_project_creation_confirmation_message.html.twig
+++ b/templates/email/citizen_project_creation_confirmation_message.html.twig
@@ -2,7 +2,7 @@
     Nous avons bien reçu votre demande de création de projet citoyen !
 {% endblock %}
 
-{% block body_html %}
+{%- block body_html -%}
 
     {% embed 'email/layout.html.twig' %}
         {% block content %}
@@ -38,4 +38,4 @@
         {% endblock %}
     {% endembed %}
 
-{% endblock %}
+{%- endblock -%}
