--- a/templates/email/citizen_project_creation_coordinator_notification_message.html.twig
+++ b/templates/email/citizen_project_creation_coordinator_notification_message.html.twig
@@ -2,7 +2,7 @@
     Un nouveau projet citoyen attend votre validation !
 {% endblock %}
 
-{% block body_html %}
+{%- block body_html -%}
 
     {% embed 'email/layout.html.twig' %}
         {% block content %}
@@ -37,4 +37,4 @@
         {% endblock %}
     {% endembed %}
 
-{% endblock %}
+{%- endblock -%}
