--- a/templates/email/committee_contact_members_message.html.twig
+++ b/templates/email/committee_contact_members_message.html.twig
@@ -2,7 +2,7 @@
     @@subject@@
 {% endblock %}
 
-{% block body_html %}
+{%- block body_html -%}
 
     {% embed 'email/layout.html.twig' %}
         {% block content %}
@@ -49,4 +49,4 @@
         {% endblock %}
     {% endembed %}
 
-{% endblock %}
+{%- endblock -%}
