--- a/templates/email/committee_message_notification_message.html.twig
+++ b/templates/email/committee_message_notification_message.html.twig
@@ -2,7 +2,7 @@
     TODO
 {% endblock %}
 
-{% block body_html %}
+{%- block body_html -%}
 
     {% embed 'email/layout.html.twig' %}
         {% block content %}
@@ -15,4 +15,4 @@
         {% endblock %}
     {% endembed %}
 
-{% endblock %}
+{%- endblock -%}
