--- a/templates/email/event_registration_confirmation_message.html.twig
+++ b/templates/email/event_registration_confirmation_message.html.twig
@@ -2,7 +2,7 @@
     Confirmation de participation à un événement En Marche !
 {% endblock %}
 
-{% block body_html %}
+{%- block body_html -%}
 
     {% embed 'email/layout.html.twig' %}
         {% block content %}
@@ -43,4 +43,4 @@
         {% endblock %}
     {% endembed %}
 
-{% endblock %}
+{%- endblock -%}
