--- a/templates/email/paybox_payment_unsubscription_confirmation_message.html.twig
+++ b/templates/email/paybox_payment_unsubscription_confirmation_message.html.twig
@@ -2,7 +2,7 @@
     Votre don mensuel a bien été annulé
 {% endblock %}
 
-{% block body_html %}
+{%- block body_html -%}
 
     {% embed 'email/layout.html.twig' %}
         {% block content %}
@@ -12,4 +12,4 @@
         {% endblock %}
     {% endembed %}
 
-{% endblock %}
+{%- endblock -%}
