--- a/templates/email/procuration_proxy_reminder_message.html.twig
+++ b/templates/email/procuration_proxy_reminder_message.html.twig
@@ -2,7 +2,7 @@
     RAPPEL : votre procuration
 {% endblock %}
 
-{% block body_html %}
+{%- block body_html -%}
 
     {% embed 'email/layout.html.twig' %}
         {% block content %}
@@ -119,4 +119,4 @@
         {% endblock %}
     {% endembed %}
 
-{% endblock %}
+{%- endblock -%}
